Added missed class
The buttons of the form missed the `pure-button` class

--- a/home.html
+++ b/home.html
@@ -123,8 +123,8 @@
                      <textarea name="message" placeholder="Your message here..."></textarea>
                   </div>
                   <div class="pure-controls">
-                     <input type="submit" class="pure-button-primary" value="Submit" />
-                     <input type="reset" value="Reset" />
+                     <input type="submit" class="pure-button pure-button-primary" value="Submit" />
+                     <input type="reset" class="pure-button" value="Reset" />
                   </div>
                </fieldset>
             </form>
